--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,11 +4,52 @@
 @import 'global';
 @import 'libs';
 
+.header {
+    position: fixed;
+    width: 100%;
+    padding: 16px;
+    border-bottom: 1px solid $white;
+}
+
+.menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    &__list,
+    &__box {
+        display: flex;
+        align-items: center;
+    }
+
+    &__item {
+        font-family: 'Open Sans One', sans-serif;
+        font-weight: 300;
+        font-size: 13px;
+        line-height: 16px;
+        letter-spacing: 0.11em;
+        text-transform: uppercase;
+        margin-right: 59px;
+    }
+
+    &__link {
+        padding: 4px 6px;
+
+        &:hover {
+            background-color: $oat-milk;
+            border-radius: 18px;
+        }
+
+    }
+
+}
+
 .top {
     height: 100vh;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    border-bottom: 1px solid $black;
 
     &__inner {
         display: flex;
