--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -150,10 +150,70 @@
             background-repeat: no-repeat;
             background-size: contain;
         }
+
     }
+
 }
 
+.service {
+    background-color: $ivory;
+    padding: 137px 0 177px 0;
 
+    &__list {
+        display: flex;
+        justify-content: center;
+    }
 
+    &__item {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: flex-start;
+        max-width: 350px;
+        width: 100%;
+    }
+
+    &__item:not(:last-child) {
+        margin-right: 90px;
+    }
+
+    &__img {
+        margin-bottom: 32px;
+        border: 1px solid $black;
+    }
+
+    &__title {
+        font-family: 'Cormorant', sans-serif;
+        font-weight: 300;
+        font-size: 36px;
+        line-height: 44px;
+        letter-spacing: -0.005em;
+        margin-bottom: 31px;
+        position: relative;
+
+        &::before {
+            content: '';
+            position: absolute;
+            width: 100%;
+            height: 1px;
+            right: 0;
+            bottom: -20%;
+            background-color: #C59888;
+        }
+    }
+
+    &__text {
+        font-family: 'Cormorant', sans-serif;
+        font-weight: 400;
+        font-size: 24px;
+        line-height: 29px;
+        margin-bottom: 38px;
+    }
+
+    &__btn {
+        padding: 16px 60px;
+    }
+
+}
 
 
