--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -276,3 +276,57 @@
     }
 
 }
+
+.reviews {
+    background-color: $light-brown;
+    padding: 167px 0 190px 0;
+
+    &__title {
+        font-family: 'Cormorant', sans-serif;
+        font-style: italic;
+        font-weight: 300;
+        font-size: 64px;
+        line-height: 78px;
+        color: $white;
+        text-align: center;
+        margin-bottom: 52px;
+    }
+
+    &__list {
+        text-align: center;
+    }
+
+    &__item {
+        max-width: 864px;
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+    }
+
+    &__text {
+        text-transform: uppercase;
+        color: $white;
+        letter-spacing: 0.11em;
+        margin-bottom: 52px;
+    }
+
+    &__name {
+        line-height: 29px;
+        color: $title;
+    }
+
+    .slick-arrow {
+        position: absolute;
+        top: 30%;
+    }
+
+    .slick-prev {
+        left: 0;
+        z-index: 10;
+    }
+
+    .slick-next {
+        right: 0;
+    }
+
+}
