--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -113,44 +113,10 @@
         max-width: 886px;
         width: 100%;
         margin: 0 auto;
-        text-align: center;
         font-size: 29px;
         line-height: 39px;
         font-weight: 600;
-        letter-spacing: 0.11em;
-        text-transform: uppercase;
-        color: $white;
         margin-bottom: 26px;
-    }
-
-    &__link {
-        position: relative;
-        display: block;
-        max-width: 260px;
-        width: 100%;
-        margin: 0 auto;
-        font-size: 16px;
-        line-height: 22px;
-        font-weight: 800;
-        color: $oat-milk;
-        letter-spacing: 0.11em;
-        text-transform: uppercase;
-        padding-right: 30px;
-
-        &::before {
-            content: '';
-            position: absolute;
-            width: 30px;
-            height: 30px;
-            top: 50%;
-            right: 0;
-            transform: translateY(-50%);
-            background-image: url("../images/prenatalFitness/start/arrow.svg");
-            background-position: center;
-            background-repeat: no-repeat;
-            background-size: contain;
-        }
-
     }
 
 }
@@ -304,9 +270,6 @@
     }
 
     &__text {
-        text-transform: uppercase;
-        color: $white;
-        letter-spacing: 0.11em;
         margin-bottom: 52px;
     }
 
@@ -330,3 +293,35 @@
     }
 
 }
+
+.consult {
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding: 176px 0 154px 0;
+
+    &__title {
+        font-family: 'Cormorant', sans-serif;
+        font-weight: 500;
+        font-size: 64px;
+        line-height: 78px;
+        letter-spacing: -0.005em;
+        color: $white;
+        text-align: center;
+        margin-bottom: 18px;
+    }
+
+    &__text {
+        max-width: 585px;
+        width: 100%;
+        margin: 0 auto;
+        margin-bottom: 37px;
+
+    }
+
+    &__link {
+        max-width: 150px;
+        width: 100%;
+    }
+}
+
